--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 certifi==2020.6.20
-cffi @ file:///C:/ci/cffi_1600699250966/work
+cffi 
 click==7.1.2
 cycler==0.10.0
 Cython==0.29.17
@@ -10,25 +10,25 @@ gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.17.0
-kiwisolver @ file:///C:/ci/kiwisolver_1603996595157/work
-MarkupSafe @ file:///C:/ci/markupsafe_1594405949945/work
-matplotlib @ file:///C:/ci/matplotlib-base_1603356257853/work
+kiwisolver
+MarkupSafe
+matplotlib
 mkl-fft==1.2.0
 mkl-random==1.0.4
 mkl-service==2.3.0
 mpld3==0.5.1
-numpy @ file:///C:/ci/numpy_and_numpy_base_1603468620949/work
+numpy
 olefile==0.46
-pandas @ file:///C:/ci/pandas_1602088205210/work
+pandas
 patsy==0.5.1
-Pillow @ file:///C:/ci/pillow_1603821929285/work
+Pillow
 pmdarima==1.7.1
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pycparser
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 scikit-learn==0.23.2
-scipy @ file:///C:/ci/scipy_1597686737426/work
+scipy
 six==1.15.0
 statsmodels==0.11.1
 tabulate==0.8.7
@@ -37,7 +37,7 @@ torch==1.7.0
 torchaudio==0.7.0
 torchvision==0.8.1
 tornado==6.0.4
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1598376058250/work
+typing-extensions
 urllib3==1.26.0
 Werkzeug==1.0.1
 wincertstore==0.2
