--- a/requirements.txt
+++ b/requirements.txt
@@ -3,38 +3,30 @@ cffi
 click==7.1.2
 cycler==0.10.0
 Cython==0.29.17
-dataclasses==0.6
 Flask==1.1.2
 future==0.18.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
-joblib==0.17.0
+joblib
 kiwisolver
-MarkupSafe
+MarkupSafe==1.1.1
 matplotlib
-mpld3==0.5.1
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
 numpy
 olefile==0.46
 pandas
 patsy==0.5.1
 Pillow
-pmdarima==1.7.1
 pycparser
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
-scikit-learn==0.23.2
 scipy
-six==1.15.0
-statsmodels==0.11.1
-tabulate==0.8.7
-threadpoolctl==2.1.0
-torch==1.7.0
-torchaudio==0.7.0
-torchvision==0.8.1
+sip==4.19.13
+six
 tornado==6.0.4
-typing-extensions
-urllib3==1.26.0
 Werkzeug==1.0.1
 wincertstore==0.2
